# boolean_function

./: Cargo.toml  README.md  katex-header.html
examples/bruteforce_8_var_sbox_bf_finder/: Cargo.toml  README.md
examples/bruteforce_8_var_sbox_bf_finder/src/: main.rs
examples/highly_nonlinear_balanced_finder/: Cargo.toml
examples/highly_nonlinear_balanced_finder/src/: main.rs
src/: affine_equivalence_classes.rs  anf_polynom.rs  big_boolean_function.rs  boolean_function_error.rs  iterator.rs  lib.rs  small_boolean_function.rs  utils.rs
