[package]
name = "boolean_function"
description = "Mathematical analysis of Boolean functions"
version = "0.1.2"
edition = "2021"
rust-version = "1.56.0"
authors = ["Thomas Prévost"]
license = "MIT OR Apache-2.0"
keywords = ["boolean", "function", "algebra", "cryptography", "s-box"]
categories = ["algorithms", "cryptography", "mathematics"]
repository = "https://github.com/thomasarmel/boolean_function"
exclude = [".github/*", "examples"]

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-bigint = "0.4"
thiserror = "2.0"
itertools = "0.14"
fast-boolean-anf-transform = "0.0.3"
gen-combinations = "0.1"
enum_dispatch = "0.3"
ouroboros = "0.18"
hackfn = "0.1"

[dev-dependencies]
rayon = "1.11"

[features]
unsafe_disable_safety_checks = []

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"] # LaTeX support in documentation
